feat: update contribution.intro

--- a/mtrf.tex
+++ b/mtrf.tex
@@ -69,23 +69,25 @@ Since both raw words and semantic role labels are symbols, it has limited repres
 The main problem is that only few works learn embeddings at the event level. \citet{tilk2016event} proposed two models trained on SDS2015 to learn a representation of events and their participants. To obtain a probability distribution over role-fillers given the event information, the models aim to perform \textit{role-filler prediction}: In each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role. The predicate is considered as a special role label which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. They reported great improvement over previous systems on thematic fit evaluation and competitive performance on event similarity evaluation. However, the definition of notion \textit{role} is vague. It is hard to explain why predicates and semantic role-fillers are treated as the same. In addition to that, there is a problem of event embedding if we only focus on role-filler prediction. The event embeddings with same argument words but different roles can be very similar to each other. For example, the embedding vector of $([_\text{ARG0 }\text{boy}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{apple}])$ can be very similar to the embedding vector of $([_\text{ARG0 }\text{apple}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{boy}])$, where $cut$ is the shared predicate. 
 
 
-\subsection{Main Tasks and Contribution}
-In this paper, we present several multi-task neural network models to learn embeddings at the level of event. With a view to the explainability of the task, we separate \textit{role-filler prediction} into two sub-tasks: 
+\subsection{Major Tasks and Contribution}
+In this paper, we present several multi-task neural network models to learn embeddings at the inner level of event. With a view to the explainability of the task, we separate \textit{role-filler prediction} into two sub-tasks: 
 \begin{itemize}
   \item  \textbf{Participant prediction}: in each event, given the predicate, the semantic role label of one target participant, the other participants and their semantic role labels, the task is to predict the target participant to fill the semantic role. 
   \item  \textbf{Predicate prediction}: in each event, given all participants and their semantic role labels, the task is to predict the predicate. 
 \end{itemize}
-where participant and predicate can be combined as \textit{role-filler}. Since their lexical features are homogeneous, we can consider each role-filler as a word. To get rid of ambiguity, we define \textbf{role labels} as a set which contains semantic role labels in PropBank style for event participants and a role label PREDICATE for predicates. In order to tackle the problem in event embedding stated above, we add one more auxiliary task which is: 
+where participant and predicate can be combined as \textit{role-filler}. Since their lexical features are homogeneous, we can consider each role-filler as a word. To get rid of ambiguity, we define \textbf{semantic role labels} as a set which contains semantic role labels in PropBank style for event participants and a special semantic role label PREDICATE for predicates. In order to tackle the similarity problem in event embedding stated above, we add one more auxiliary task which is: 
 \begin{itemize}
-  \item  \textbf{Role label prediction}: in each event, given one target word, and all other words and their role labels, the task is to predict the target role label. 
+  \item  \textbf{Semantic role label prediction}: in each event, given one target word, and all other words and their semantic role labels, the task is to predict the target semantic role label. 
 \end{itemize}
-By forcing the models to solve role label prediction during training, the event embeddings with same words but different roles will be distinguished. 
+By forcing the models to solve semantic role label prediction during training, the event embeddings with same words but different roles will be distinguished. 
 
-Inspiring by the role-specific word embedding, we define the \textbf{event-participant embedding} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word, role\ label)$. As a result, each word can be represented as a matrix, indexed by an 1-tuple $(word)$, which can be easily reshaped into a word embedding vector (see Section \ref{sec:epe}). Although the event-participant embedding is a versatile representation, it suffers the curse of dimensionality. So we apply tensor factorisation on the event-participant embedding tensor, which factorise the tensor into three matrices. After detailed analysis in the tensor space, we demonstrate that these matrices can be interpreted as word embedding, role label embedding and projection weight correspondingly (see Section \ref{sec:tf}). 
+Inspired by the role-specific word embedding, we define the \textbf{event-participant embedding} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word, role\ label)$. As a result, each word can be represented as a matrix, indexed by an 1-tuple $(word)$, which can be easily reshaped into a word embedding vector (see Section \ref{sec:epe}). Although the event-participant embedding is a versatile representation, it suffers the curse of dimensionality. So we apply tensor factorisation on the event-participant embedding tensor, which factorise the tensor into three matrices. After detailed analysis in the tensor space, we demonstrate that these matrices can be interpreted as word embedding, semantic role label embedding and projection weight correspondingly (see Section \ref{sec:tf}). 
 
-Using the same event-participant embedding as input, we add non-linearity to the models to construct multitask neural networks. To perform both role-filler prediction and role label prediction, we design two classifiers with their own loss functions. The models are optimised with different weight of each task (see Section \ref{sec:mtl}). We find that tuning the loss weight results in models having their own advantages in different aspects. When it comes to the construction of event representation, there are two cases: word order is known and unknown. In this paper, we focus on the case which word order is not given. After comparing several composition methods, we present an effective method to compose the event-level embedding using features from hidden layer (see Section \ref{sec:composition}). It has been shown that gradient exploding or vanishing problem is more serious in training model with factorised tensors \citep{sutskever2011generating}.  Making use of the idea in residual learning, we add one skip connection inside the factor tensor (see Section \ref{sec:residual}). We find that this method can help with learning a better event-participant embedding.
+Using the same event-participant embedding as input, we add non-linearity to the models to construct multitask neural networks. To perform both role-filler prediction and semantic role label prediction, we design two classifiers with their own loss functions. The models are optimised with different weight of each task (see Section \ref{sec:mtl}). We find that tuning the loss weight results in models having their own advantages in different aspects. When it comes to the construction of event representation, there are two cases: word order is known and unknown. In this paper, we focus on the case which word order is not given. After comparing several composition methods, we present an effective method to compose the event-level embedding using features from hidden layer (see Section \ref{sec:composition}). It has been shown that gradient exploding or vanishing problem is more serious in training model with factorised tensors \citep{sutskever2011generating}.  Making use of the idea in residual learning, we add one skip connection inside the factor tensor (see Section \ref{sec:residual}). We find that this method can help with learning a better event-participant embedding.
 
-To compare with previous baselines, all models are trained on the SDS2015. Hyper-parameters are tuned to optimise for different purposes (see Section \ref{sec:exp}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on a event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models has significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The word embedding and event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance. 
+To compare with previous baselines, all models are trained, validated and tested on the same corpus. Hyper-parameters are tuned to optimise for different purposes (see Section \ref{sec:exp}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on a event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models has significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The word embedding and event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance. 
+
+Our model is a state-of-the-art system in selectional preference task. The selectional preference features are useful for referent prediction in discourse level \citep{modi2017modeling}. The word embedding we learn can be further employed in discourse relation classification, paraphrase detection, word sense disambiguation, sentiment analysis and machine translation. The composite features of predicate and target semantic role label can be used for argument classification in semantic role labelling \citep{roth2016neural}.  
 
 
 \begin{table}[t]
@@ -101,7 +103,6 @@ LOCATION                &   The location or spatial orientation of the event \\
 \end{table}
 
 
-\section{Background}
 \section{Background}
 \subsection{Event Knowledge and Representation} \label{sec:event}
 In psycholinguistics and cognitive science, experiments have shown that event knowledge plays a crucial role in human sentence processing \citep{camblin2007interplay}. On one hand, predicates prime event participant referring to good fillers of their semantic role in an event \citep{ferretti2001integrating}. On the other hand, priming effect can be also found from event participants to predicates \citep{mcrae2005basis}. These two works reveal that model performances of predicate prediction and participant prediction can be evaluated via correlation with human judgement. In a wider range, event-level information affects verbal arguments processing of human \citep{bicknell2010effects}. Comprehenders integrate information not only from predicate but also other event participants mentioned in discourse. Overall, it is necessary to obtain representation of events from sentences. 
