--- a/mtrf.tex
+++ b/mtrf.tex
@@ -239,7 +239,7 @@ which is a representation of a participant in an event. "$\circ$" is Hadamard pr
 
 \section{Model Design}
 \subsection{Non-incremental Role Filler} \label{sec:nnrf}
-To perform the role-filler prediction, \citet{tilk2016event} proposed the \textit{non-incremental role filler} \textbf{(NNRF)} which is a 2-layer neural network model. As in Figure \ref{fig:NNRF}, from input to output, the model uses event-participant embeddings as input. Parameters are learnt together with the model. The embedding vector of the $l$-th event participant in an event can be represented as:
+To perform the role-filler prediction, \citet{tilk2016event} proposed the \textit{non-incremental role filler} \textbf{(NNRF)} which is a 2-layer neural network model. As in Figure \ref{fig:NNRF}, from input to output, the model uses event-participant embeddings as input. Parameters are learnt together with the model. The embedding vector of the $l$-th entry in an event can be represented as:
 \begin{equation} \label{eq:rbe_nnrf}
 \begin{aligned}
     \mathbf{p}_l
@@ -247,28 +247,28 @@ To perform the role-filler prediction, \citet{tilk2016event} proposed the \texti
 \end{aligned}
 \end{equation}
 The embedding vectors are composed using sum method into an representation of words except the target word as:
-\begin{equation} \label{eq:mean_comp}
+\begin{equation} \label{eq:sum_comp}
 \begin{aligned}
     \mathbf{e}
         &= \sum_{l=1}^{L} \mathbf{p}_{l} \\
 \end{aligned}
 \end{equation}
 where $l$ is the index of the participant and $L$ is the number of participants in current event $e$. Then it passes through one non-linearity layer with parametric rectified linear unit \citep{he2015delving} as follow:
-\begin{equation} \label{eq:nonlinearity}
+\begin{equation} \label{eq:nonlinearity_nnrf}
 \begin{aligned}
     \mathbf{h}
         &= PReLU(\mathbf{e} + \mathbf{b}_e) \\
 \end{aligned}
 \end{equation}
 where $\mathbf{b}_e$ is the bias vector of this layer. After that, a softmax regression classifier is used for prediction. The output vector of this classifier is computed as:
-\begin{equation} \label{eq:output}
+\begin{equation} \label{eq:output_nnrf}
 \begin{aligned}
     \mathbf{o}
         &= \mathbf{h}\mathbf{W}_c + \mathbf{b}_c \\
 \end{aligned}
 \end{equation}
 where $\mathbf{W}_c\in \mathbb{R}^{d \times |V|}$ is a weight matrix of the target word classifier and $\mathbf{b}_c$ is the corresponding bias. The conditional probability of target word $a_x$ given event $e$ and target role $b_y$ is:
-\begin{equation} \label{eq:softmax}
+\begin{equation} \label{eq:softmax_nnrf}
 \begin{aligned}
     p(a_x | e, b_y)
         &= Softmax(\mathbf{o})_{(x)} \\
@@ -280,13 +280,6 @@ where $\mathbf{W}_c\in \mathbb{R}^{d \times |V|}$ is a weight matrix of the targ
 \end{equation}
 where suffix $(x)$ is the $x$-th element of the vector. 
 
-
-\begin{figure}[t]
-\centering
-\includegraphics[width=0.7\textwidth]{MTNNRF.png}
-\caption{\label{fig:MTNNRF} Model architecture of multitask version of non-incremental role filler.}
-\end{figure}
-
 For each target target role, there is a different weight matrix to perform classification. \citet{tilk2016event} performed a similar technique like the role-specific word embedding. At first weight matrix $\mathbf{W}_c^{(b_y)}$ is defined for each target role $b_y$. Then those matrices $\mathbf{W}_c^{(b_y)}$ are stacked from $b_1$ to $b_{|R|}$. A weight tensor $\mathbf{T}^{(c)} \in \mathbb{R}^{d \times |R| \times |V|}$ is obtained. But this tensor suffer the same dimensionality problem as event-participant embedding tensor. So tensor rank decomposition is applied again on the weight tensor, and extract the corresponding weight matrices for $b_y$ as follow: 
 \begin{equation} \label{eq:trd_cls}
 \begin{aligned}
@@ -294,14 +287,14 @@ For each target target role, there is a different weight matrix to perform class
         &= \sum_{m=1}^{k^{(c)}} \mathbf{c}_{m}^{(c)} \otimes \mathbf{b}_{m_{(y)}}^{(c)} \otimes \mathbf{a}_m^{(c)} \\
 \end{aligned}
 \end{equation}
-Similarly, vectors $\mathbf{c}_{m}^{(c)}$ are grouped by row into matrices $\mathbf{C}_c \in \mathbb{R}^{d \times k^{(c)}}$ and $\mathbf{a}_m^{(c)}$ are grouped by column into matrices $\mathbf{A}_c \in \mathbb{R}^{k^{(c)} \times |V|}$. After getting rid of outer product using same transformation as equation \eqref{eq:rbwe}, the weight matrix in equation \eqref{eq:output}  can be written as:
+Similarly, vectors $\mathbf{c}_{m}^{(c)}$ are grouped by row into matrices $\mathbf{C}_c \in \mathbb{R}^{d \times k^{(c)}}$ and $\mathbf{a}_m^{(c)}$ are grouped by column into matrices $\mathbf{A}_c \in \mathbb{R}^{k^{(c)} \times |V|}$. After getting rid of outer product using same transformation as equation \eqref{eq:rbwe}, the weight matrix in equation \eqref{eq:output_nnrf}  can be written as:
 \begin{equation} \label{eq:cls}
 \begin{aligned}
     \mathbf{W}_c
         &= \mathbf{C}_c \ diag(\mathbf{b}_y) \ \mathbf{A}_c \\
 \end{aligned}
 \end{equation}
-where $diag(\mathbf{v})$ is a diagonal matrix with vector $\mathbf{v}$ on its diagonal. Since there is a vector $\mathbf{b}_y$ representing target role $b_y$, the embedding matrices $\mathbf{B}_c \in \mathbb{R}^{k^{(c)} \times |R|}$ can be defined for target roles. The weight matrices can be further written as:
+Since there is a vector $\mathbf{b}_y$ representing target role $b_y$, the embedding matrices $\mathbf{B}_c \in \mathbb{R}^{k^{(c)} \times |R|}$ can be defined for target roles. The weight matrices can be further written as:
 \begin{equation} \label{eq:cls_temb}
 \begin{aligned}
     \mathbf{W}_c
