--- a/mtrf.tex
+++ b/mtrf.tex
@@ -44,7 +44,7 @@ In natural language understanding, the representation of events and their partic
     & &\text{The cook cut the cake with knife in the kitchen.}        \label{eg:sent1} \\   
     & &\text{In the kitchen, the cake is cut with knife by the cook.} \label{eg:sent2}
 \end{eqnarray}
-the event-level information are actually the same. The event is described by the predicate $cut$ and the participants of this event are $cook$, $cake$, $knife$ and $kitchen$. Although the syntactic roles of participant $cook$ in two sentences are different (subject in sentence \eqref{eg:sent1} and object in sentence \eqref{eg:sent2}), they are both the $cutter$ of the $cake$. This shared information can be capture by a level of shallow semantic representation: \textit{semantic roles} \citep{jurafsky2014speech}. 
+the event-level information is actually the same. The event is described by the predicate $cut$ and the participants of this event are $cook$, $cake$, $knife$ and $kitchen$. Although the syntactic roles of participant $cook$ in two sentences are different (subject in sentence \eqref{eg:sent1} and object in sentence \eqref{eg:sent2}), they are both the $cutter$ of the $cake$. This shared information can be capture by a level of shallow semantic representation: \textit{semantic roles} \citep{jurafsky2014speech}. 
 
 Semantic roles express the abstract roles of participant can taken in an event. In this level of representation, event participants can be mapped to arguments where they located. Using \textit{thematic role}, an inventory of conceptual argument roles (see Section \ref{sec:semanticrole}), the two sentences in earlier example can be annotated as: 
 \begin{equation*} \label{eg:thematic}
@@ -60,13 +60,11 @@ where the event participants are actually head nouns or noun-noun compounds insi
     & \text{Arguments: } [_\text{ARG0 }\text{The }\textbf{cook}], \ [_\text{ARG1 }\text{the }\textbf{cake}], \ [_\text{ARGM-MNR }\text{with a }\textbf{knife}], \ [_\text{ARGM-LOC }\text{in the }\textbf{kitchen}]
 \end{aligned}
 \end{equation*} 
-where each argument is assigned with a semantic role label. $cut.01$ is the verbal predicate $cut$ with sense $01$ which is \textit{"make an incision or separation"}. Now the ARG0 role can be defined exactly as \textit{"the subject which makes incision"}. To obtain this representation from raw text, one needs to solve semantic role labelling task. 
+where each argument is assigned with a semantic role label. $cut.01$ is the verbal predicate $cut$ with sense $01$ which is \textit{"make an incision or separation"}. Now the ARG0 role can be defined exactly as \textit{"the subject which makes incision"}. To obtain this representation from raw text, one needs to solve semantic role labelling task (see Section \ref{sec:srl}). 
 
-The \textit{semantic role labelling} (SRL) task is to assign semantic role labels to arguments of predicates in sentences automatically. After many years of research, pre-trained semantic role labelling systems are quite reliable (see Section \ref{sec:srl}). Yet most of these works only assign labels to whole constituents instead of syntactic heads that are denoting event participants. \citet{SayeedEtAl2015} proposed an unsupervised method of assigning semantic roles to syntactic heads in arguments. The raw text are firstly processed by SENNA which is a neural network based semantic role labeller \citep{collobert2011natural}. Then the head nouns are extracted from arguments using Malt Parser, a state-of-the-art dependency parser \citep{nivre2006maltparser}, together with hand-crafted heuristics. The annotated corpus they constructed is named as \textbf{SDS2015} here. 
+Since both raw words and semantic role labels are symbols, it has limited representing power. If someone wants to compare events quantitatively, it is not possible to use the \textit{symbolic representation} where each symbol represent a single state of the entry. There are some previous works construct representation of linguistic units e.g. \textit{Distributional semantic model} (DSM) (see Section \ref{sec:dsm}). Amoung them, \textit{Distributed representation} of words, also named as \textit{word embedding}, is a well-established technique based on continuous feature space. Each word is represented by a low-dimensional dense vector with real number parameters, where those parameters are learnt during training of a prediction task given the context. There are many efforts on learning word embeddings from large scale corpora (see Section \ref{sec:repr}). 
 
-Since both raw words and semantic role labels are symbols, it has limited representing power. If one wants to compare events quantitatively, it is not possible to use symbolic representation. \textit{Distributional semantic model} (DSM) is a corpus-based method to construct numerical semantic representation. In this method, vectors with co-occurrence counts as weights are representation of linguistic units. The semantic similarity between two units can be quantified as the similarity of two representation vectors (see Section \ref{sec:dsm}). But when it comes to practice, the semantic space of DSM is discrete, high-dimensional and sparse. When someone wants to induce on complex events with large number of participants, using sparse vectors is unfeasible. \textit{Distributed representation} of words, also named as \textit{word embedding}, is a well-established technique based on continuous feature space. Each word is represented by a low-dimensional dense vector with real number parameters, where those parameters are learnt during training of a prediction task given the context. There are many efforts on learning word embeddings from large scale corpora (see Section \ref{sec:repr}). 
-
-The main problem is that only few works learn embeddings at the event level. \citet{tilk2016event} proposed two models trained on SDS2015 to learn a representation of events and their participants. To obtain a probability distribution over role-fillers given the event information, the models aim to perform \textit{role-filler prediction}: In each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role. The predicate is considered as a special role label which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. They reported great improvement over previous systems on thematic fit evaluation and competitive performance on event similarity evaluation. However, the definition of notion \textit{role} is vague. It is hard to explain why predicates and semantic role-fillers are treated as the same. In addition to that, there is a problem of event embedding if we only focus on role-filler prediction. The event embeddings with same argument words but different roles can be very similar to each other. For example, the embedding vector of $([_\text{ARG0 }\text{boy}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{apple}])$ can be very similar to the embedding vector of $([_\text{ARG0 }\text{apple}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{boy}])$, where $cut$ is the shared predicate. 
+The main problem is that only a few works learn embeddings of information inside events. \citet{tilk2016event} proposed two models trained to learn a representation of events and their participants. To obtain a probability distribution over role-fillers given the event information, the models aim to perform \textit{role-filler prediction}: In each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role. The predicate is considered as a special role label which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. They reported great improvement over previous systems on thematic fit evaluation and competitive performance on event similarity evaluation. However, the definition of notion \textit{role} is vague. It is hard to explain why predicates and semantic role-fillers are treated as the same. In addition to that, there is a problem of event embedding if we only focus on role-filler prediction. The event embeddings with same argument words but different roles can be very similar to each other. For example, the embedding vector of $([_\text{ARG0 }\text{boy}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{apple}])$ can be very similar to the embedding vector of $([_\text{ARG0 }\text{apple}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{boy}])$, where $cut$ is the shared predicate. 
 
 
 \subsection{Major Tasks and Contribution}
@@ -87,7 +85,7 @@ Using the same event-participant embedding as input, we add non-linearity to the
 
 To compare with previous baselines, all models are trained, validated and tested on the same corpus. Hyper-parameters are tuned to optimise for different purposes (see Section \ref{sec:exp}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on a event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models has significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The word embedding and event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance. 
 
-Our model is a state-of-the-art system in selectional preference task. The selectional preference features are useful for referent prediction in discourse level \citep{modi2017modeling}. The word embedding we learn can be further employed in discourse relation classification, paraphrase detection, word sense disambiguation, sentiment analysis and machine translation. The composite features of predicate and target semantic role label can be used for argument classification in semantic role labelling \citep{roth2016neural}.  
+Our model is a state-of-the-art system in selectional preference task. The selectional preference features are useful for referent prediction in discourse level \citep{modi2017modeling}. The word embedding we learn can be further employed in discourse relation classification, paraphrase detection, word sense disambiguation, sentiment analysis and machine translation. The composite features of predicate and target semantic role label can be used for argument classification in semantic role labelling \citep{roth2016neural}. 
 
 
 \begin{table}[t]
